[package]
name = "dtypei-derive"
version = "0.1.0"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.13", features = ["full", "derive"] }
quote = "1.0.2"
dtypei = { path = "../dtypei" }
serde_json = "1.0"
