[package]
name = "dtypei-derive"
description = "Introspection - interface description for your Rust exports"
documentation = "https://github.com/pipeos-one/dtypei"
homepage = "https://github.com/pipeos-one/dtypei"
repository = "https://github.com/pipeos-one/dtypei"
readme = "../README.md"
keywords = ["dtypei", "introspection", "interface"]
license = "GPL-3.0-or-later"
version = "0.0.1"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.13", features = ["full", "derive"] }
quote = "1.0.2"
dtypei = "0.0.1"
serde_json = "1.0"
