[package]
name = "dtypei-wrapper"
version = "0.0.1"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"] }
js-sys = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.1.3"
wasm-bindgen-futures = "0.4.5"
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
shorthand = "0.1.0"
dtypei = { path = "../dtypei" }
