[package]
name = "dtypei"
description = "Introspection - interface description for your Rust exports"
documentation = "https://github.com/pipeos-one/dtypei"
homepage = "https://github.com/pipeos-one/dtypei"
repository = "https://github.com/pipeos-one/dtypei"
readme = "../README.md"
keywords = ["dtypei", "introspection", "interface"]
license = "GPL-3.0-or-later"
version = "0.0.1"
authors = ["Loredana <loredana.cirstea@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
